# affect-twin-call-coach

./: .gitignore  README.md  pyproject.toml
docs/: SOTA.md
src/affecttwin/: __init__.py  __main__.py  cli.py  expression.py  pipeline.py  slm_hooks.py
src/affecttwin/app/: __init__.py  api.py  streamlit_app.py
src/affecttwin/client/: __init__.py  nfs.py
src/affecttwin/coach/: __init__.py  suggestions.py
src/affecttwin/kpi/: __init__.py  frame.py  synthetic.py
src/affecttwin/thought/: __init__.py  proxies.py
tests/: test_coach.py
